--- a/packages/skins/src/minimal/css/components/media.css
+++ b/packages/skins/src/minimal/css/components/media.css
@@ -7,7 +7,12 @@
   display: block;
   width: 100%;
   height: 100%;
+}
+.media-minimal-skin ::slotted(video) {
   border-radius: var(--media-border-radius, 0.75rem);
+}
+.media-minimal-skin video {
+  border-radius: inherit;
 }
 
 /* ==========================================================================
@@ -27,4 +32,17 @@
   &:not([data-visible]) {
     opacity: 0;
   }
+}
+
+/* ==========================================================================
+   Fullscreen
+   ========================================================================== */
+
+.media-minimal-skin:fullscreen video,
+.media-minimal-skin:fullscreen ::slotted(video),
+.media-minimal-skin > img {
+  object-fit: contain;
+}
+.media-minimal-skin:fullscreen ::slotted(video) {
+  border-radius: 0;
 }
